--- a/Autobus/View/AraçGirişView.xaml
+++ b/Autobus/View/AraçGirişView.xaml
@@ -16,10 +16,6 @@
     <Grid>
         <GroupBox Header="ARAÇ GİRİŞİ">
             <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="3*" />
                     <ColumnDefinition Width="2*" />
@@ -95,24 +91,23 @@
                                 <TextBlock Text="ARAÇ GİR" VerticalAlignment="Center" />
                             </StackPanel>
                         </Button>
+                        <GroupBox Header="ARAÇ MARKA GİRİŞİ">
+                            <StackPanel>
+                                <TextBlock Text="MARKA AÇIKLAMA" />
+                                <ComboBox Text="{Binding Marka.Açıklama, UpdateSourceTrigger=PropertyChanged}"
+                                    IsEditable="True"
+                                    ItemsSource="{StaticResource Arabalar}" />
+                                <Button Command="{Binding MarkaEkle}" CommandParameter="{Binding Otobüs.Markalar, Source={StaticResource MainViewModel}}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Width="32" Height="32"
+                                            Source="/Resources/car.png" />
+                                        <TextBlock Text="MARKA GİR" VerticalAlignment="Center" />
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                        </GroupBox>
                     </StackPanel>
                 </ScrollViewer>
-                <GroupBox Grid.Row="1" Grid.Column="0"
-                    Header="ARAÇ MARKA GİRİŞİ">
-                    <StackPanel>
-                        <TextBlock Text="MARKA AÇIKLAMA" />
-                        <ComboBox Text="{Binding Marka.Açıklama, UpdateSourceTrigger=PropertyChanged}"
-                            IsEditable="True"
-                            ItemsSource="{StaticResource Arabalar}" />
-                        <Button Command="{Binding MarkaEkle}" CommandParameter="{Binding Otobüs.Markalar, Source={StaticResource MainViewModel}}">
-                            <StackPanel Orientation="Horizontal">
-                                <Image Width="32" Height="32"
-                                    Source="/Resources/car.png" />
-                                <TextBlock Text="MARKA GİR" VerticalAlignment="Center" />
-                            </StackPanel>
-                        </Button>
-                    </StackPanel>
-                </GroupBox>
                 <GroupBox DataContext="{Binding Araç}"
                     Grid.Row="0" Grid.RowSpan="2" Grid.Column="1">
                     <GroupBox.Header>
