Add project files.

--- a/Autobus/MainWindow.xaml
+++ b/Autobus/MainWindow.xaml
@@ -52,6 +52,8 @@
                     <RibbonApplicationMenuItem IsEnabled="False" />
                     <RibbonApplicationMenuItem IsEnabled="False" />
                     <RibbonApplicationMenuItem IsEnabled="False" />
+                    <RibbonApplicationMenuItem IsEnabled="False" />
+                    <RibbonApplicationMenuItem IsEnabled="False" />
                 </RibbonApplicationMenu>
             </Ribbon.ApplicationMenu>
             <RibbonTab Header="OTOBÜS" RenderOptions.BitmapScalingMode="NearestNeighbor">
